# PCAB_Debugger2

./: PCAB_Debugger2.sln  README.md
PCAB_Debugger2_APAC/: App.xaml  App.xaml.cs  PCAB_Debugger2_APAC.csproj  winMain.xaml
PCAB_Debugger2_APAC/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PCAB_Debugger2_GUI/: App.config  PCAB_Debugger2_GUI.csproj  README.md  clsAsyncButton.cs  clsPCAB.cs  clsPCAB_IO.cs  clsPNA835x.cs  clsSERIAL.cs  clsSLIP.cs  clsSearchList.cs  clsVisa32.cs  cntAutoMeasure.xaml  cntAutoMeasure.xaml.cs  cntControl.xaml  cntControl.xaml.cs  cntControlTab.xaml  cntControlTab.xaml.cs  cntPort.xaml  cntPort.xaml.cs  cntPorts.xaml  cntPorts.xaml.cs  cntUnit.xaml  cntUnit.xaml.cs  cntUnitControl.xaml  cntUnitControl.xaml.cs  cntUnitMonitor.xaml  cntUnitMonitor.xaml.cs  winEditor.xaml  winEditor.xaml.cs  winLoop.xaml  winLoop.xaml.cs  winMain.xaml  winMain.xaml.cs  winMonitor.xaml  winMonitor.xaml.cs
PCAB_Debugger2_GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
PCAB_Debugger2_GUI_Setup/: PCAB_Debugger2_GUI_Setup.vdproj
PCAB_Debugger2_RP2040/: CMakeLists.txt  README.md  ROM.xlsx
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/: CMakeLists.txt  PCAB_Debugger_FW.cpp  PCAB_Debugger_FW.hpp  cmake_install.cmake
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibCPP_library/: CMakeLists.txt  MWComLibCPP_library.cpp  MWComLibCPP_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/adc_library/: CMakeLists.txt  adc_library.cpp  adc_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/ds18b20_library/: CMakeLists.txt  ds18b20_library.cpp  ds18b20_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/flash_library/: CMakeLists.txt  flash_library.cpp  flash_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/onewire_library/: CMakeLists.txt
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/spi_library/: CMakeLists.txt  spi_library.cpp  spi_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/uart_library/: CMakeLists.txt  uart_library.cpp  uart_library.hpp
PCAB_Debugger2_RP2040/PCAB_Debugger_FW/PCAB_Debugger_library/: CMakeLists.txt  PCAB_Debugger_library.cpp  PCAB_Debugger_library.hpp
PCAB_Debugger_RP2040/: README.md
